<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/meterIdText"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/search_for_a_water_meter_using_the_id"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetings" />

    <Button
        android:id="@+id/searchIdButton"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        android:textColor="#000000"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/meterIdText"
        app:layout_constraintTop_toBottomOf="@+id/meterIdText" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textColor="#2B2B2B"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="@+id/searchIdButton"
        app:layout_constraintTop_toBottomOf="@+id/searchIdButton" />

    <Button
        android:id="@+id/viewAllButton"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_all"
        android:textColor="#000000"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/searchIdButton"
        app:layout_constraintTop_toBottomOf="@+id/orText" />

    <FrameLayout
        android:id="@+id/list_frame"
        android:layout_width="368dp"
        android:layout_height="411dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAllButton" />

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/greetings"
        app:layout_constraintStart_toEndOf="@+id/greetings" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/log_out"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>