<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="161dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginTop="128dp"
        android:hint="@string/prompt_username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <Button
        android:id="@+id/sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        app:backgroundTint="#002196F3"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>